--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     or in the "license" file accompanying this file. This file is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
   -->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Welcome to Jeremy's world</title>
+  <title>ヽ༼ຈل͜ຈ༽ﾉヽ༼ຈل͜ຈ༽ﾉ ヽ༼ຈل͜ຈ༽ﾉ  </title>
     <style>
     body {
       color: #ffffff;
@@ -35,23 +35,22 @@
       color: #0188cc;
     }
     .textColumn, .linksColumn {
-      padding: 2em;
+      padding: 2%;
     }
     .textColumn {
       position: absolute;
       top: 0px;
-      right: 50%;
+      right: 80%;
       bottom: 0px;
       left: 0px;
 
       text-align: right;
       padding-top: 11em;
-      background-color: #c00;
-      background-image: -moz-radial-gradient(left top, circle, #f00 0%, #c00 60%);
-      background-image: -webkit-gradient(radial, 0 0, 1, 0 0, 500, from(#f00), to(#c00));
+      background-color: #ffffff;
+
     }
     .textColumn p {
-      width: 75%;
+      width: 0%;
       float:right;
     }
     .linksColumn {
@@ -59,9 +58,9 @@
       top:0px;
       right: 0px;
       bottom: 0px;
-      left: 50%;
+      left: 20%;
 
-      background-color: #fff;
+      background-color: #ffffff;
     }
 
     h1 {
@@ -75,31 +74,49 @@
       font-weight: normal;
       margin-bottom: 0em;
     }
-    ul {
+    ul.default {
       padding-left: 1em;
       margin: 0px;
+    }
+    ul.column {
+      padding-left: 0em;
+      margin: 0px;
+      list-style-type: "-";
+      list-style: "-";
     }
     li {
       color: #e0aaaa;
       margin: 1em 0em;
     }
+    .button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    margin: 5px 0px 0px 0px;
+    width: 100px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    }
   </style>
 </head>
-<body id="sample">
+<body>
   <div class="textColumn">
-    <h1>Congratulations</h1>
-    <p>Your first AWS Elastic Beanstalk <strong>Ruby</strong> Application is now running on your own dedicated environment in the AWS Cloud</p>
+    <a href="/index.html" class="button">HOME</a>
+    <a href="https://github.com/jeremyjohnston/" class="button">GITHUB</a>
   </div>
-  
-  <div class="linksColumn"> 
-    <h2>What's Next?</h2>
-    <ul>
-    <li><a href="http://docs.amazonwebservices.com/elasticbeanstalk/latest/dg/">AWS Elastic Beanstalk overview</a></li>
-    <li><a href="http://docs.amazonwebservices.com/elasticbeanstalk/latest/dg/index.html?concepts.html">AWS Elastic Beanstalk concepts</a></li>
-    <li><a href="http://docs.amazonwebservices.com/elasticbeanstalk/latest/dg/create_deploy_Ruby_rails.html">Deploy a Ruby on Rails Application to AWS Elastic Beanstalk</a></li>
-    <li><a href="http://docs.amazonwebservices.com/elasticbeanstalk/latest/dg/create_deploy_Ruby_sinatra.html">Deploy a Sinatra Application to AWS Elastic Beanstalk</a></li>
-    <li><a href="http://docs.amazonwebservices.com/elasticbeanstalk/latest/dg/create_deploy_Ruby_custom_container.html">Customizing and Configuring a Ruby Container</a></li>
-    <li><a href="http://docs.amazonwebservices.com/elasticbeanstalk/latest/dg/using-features.loggingS3.title.html">Working with Logs</a></li>
+
+  <div class="linksColumn">
+    <h2>Hi</h2>
+    <ul class="default">
+    <li>H hih hihi hi ihihih ihiihihihihiihihiih  iiiihihihihi </li>
+    <li>H hih hihi hi ihihih ihiihihihihH hih hihi hi ihihih ihiihihihihiihihiih  iiiihihihihi iihihiih  iiiihihihihi </li>
+    <li>Hiiiihihihihi </li>
+    <li>Hi HI hi</li>
+    <li>HI HI HI HI HI HI HI HI HI HI HI HI HI HI HI HI HI HI HI HI HI HI HI HI</li>
+    <li>Hello</li>
 
     </ul>
   </div>
