added rage cage link

--- a/public/index.html
+++ b/public/index.html
@@ -111,12 +111,7 @@
   <div class="linksColumn">
     <h2>Hi</h2>
     <ul class="default">
-    <li>H hih hihi hi ihihih ihiihihihihiihihiih  iiiihihihihi </li>
-    <li>H hih hihi hi ihihih ihiihihihihH hih hihi hi ihihih ihiihihihihiihihiih  iiiihihihihi iihihiih  iiiihihihihi </li>
-    <li>Hiiiihihihihi </li>
-    <li>Hi HI hi</li>
-    <li>HI HI HI HI HI HI HI HI HI HI HI HI HI HI HI HI HI HI HI HI HI HI HI HI</li>
-    <li>Hello</li>
+    <li><a href="http://jeremyjohnston.github.io/ncagefps/Source/fps.html">Lower volume, then click to enjoy</a></li>
 
     </ul>
   </div>
